tests/NormalTests/paczka1/small_fuzzy/96542659.err
Error in line 1: VMx7yQSUL S127 49,4
Error in line 5: znGhm A643 34,8
Error in line 13: B6HDzXhd A643 22,0
